--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,15 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+---
 
-## What is Nextra?
+title: Welcome
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+description: This is the official documentation for Chainflip, a cross-chain decentralised exchange, based on a proof-of-stake validator network, that uses highly efficient threshold signing schemes and a unique AMM design to offer users a maximally efficient and low friction method to trade digital assets in a totally decentralised system.
 
-## Documentation
+---
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+# Welcome to Jhonswg Services 
+
+![Welcome](https://jhonswg.com/assets/img/logo.png)
+
+<br />
+
+Jhonswg Node a trusted validator and inter-chain utility provider, we provide easy steps to delegate funds or explore our services. Our node runners are committed, enthusiastic, and thrifty in operating nodes for blockchain projects, always up to date with industry developments, and eager to contribute to the advancement of blockchain technology through efficient node operations.
