--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,3 @@
 # About
 
-Under Construction
+Jhonswg Node a trusted validator and inter-chain utility provider, we provide easy steps to delegate funds or explore our services. Our node runners are committed, enthusiastic, and thrifty in operating nodes for blockchain projects, always up to date with industry developments, and eager to contribute to the advancement of blockchain technology through efficient node operations.
